--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="jumbotron">
       <div class="container">
           <h1>BitmapEditor <small>(verse 1.0)</small></h1>
-        <p><b>BitmapEditor</b> je modulární webová aplikaci na straně klienta, která umožňuje editovat jednoduchou bitmapu a v reálném čase generovat binární reprezentaci vytvářeného formátu se zvýrazněním syntaxe. Funkcionalita je obousměrná, takže bude možné také editovat binární reprezentaci a ihned vidět bitmapu. V současné chvíli <b>BitmapEditor</b> poporuje formáty WBMP a BMP (dvoubarevné).</p>
+        <p><b>BitmapEditor</b> je modulární webová aplikace na straně klienta, která umožňuje editovat jednoduchou bitmapu a v reálném čase generovat binární reprezentaci vytvářeného formátu se zvýrazněním syntaxe. Funkcionalita je obousměrná, takže bude možné také editovat binární reprezentaci a ihned vidět bitmapu. V současné chvíli <b>BitmapEditor</b> poporuje formáty WBMP a BMP (dvoubarevné).</p>
         <p><a class="btn btn-primary btn" href="#content">Přeskočit na aplikaci &raquo;</a></p>
       </div>
     </div>
